updated latest match details and removed contact us

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Cricket is our Passion!</div>
-                <a href="#contact" class="page-scroll btn btn-xl">Contact Us</a>
+                <!-- <a href="#contact" class="page-scroll btn btn-xl">Contact Us</a> -->
             </div>
         </div>
     </header>
@@ -98,14 +98,14 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <button type="button" class="btn btn-success">
-                      <h4>Stallion Vs Caribbean</h4>
-                      <p>21st May, Bloomfield</p>
+                      <h4>Stallion Vs Sportsmen</h4>
+                      <p>23rd July, Keney Park 1</p>
                     </button>
                 </div>
                 <div class="col-md-4">
                     <button type="button" class="btn btn-success">
-                      <h4>Colts Vs Windsor</h4>
-                      <p>21st May, Windsor</p>
+                      <h4>Colts Vs St Lucia</h4>
+                      <p>23rd July, Bloomfield</p>
                     </button>
                 </div>
                 <div class="col-md-4">
@@ -268,16 +268,16 @@
                     <div class="team-member">
                         <img src="img/team/sriram.jpg" class="img-responsive img-circle" alt="">
                         <h4>Sriram</h4>
-                        <p class="text-muted">Club Co-founder</p>
+                        <p class="text-muted">Club Co-founder and Colts Captain 2017</p>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <!-- <div class="col-sm-3">
                     <div class="team-member">
                         <img src="img/team/vishwas.jpg" class="img-responsive img-circle" alt="">
                         <h4>Vishwas Rao</h4>
                         <p class="text-muted">Colts Captain 2017</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-sm-3">
                     <div class="team-member">
                         <img src="img/team/parth.jpg" class="img-responsive img-circle" alt="">
