Added contact details for Vishwas and Parth

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -43,7 +43,8 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                    <span class="sr-only">Toggle navigation</span> Menu
+                    <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">Euphoria</a>
             </div>
@@ -87,31 +88,24 @@
         </div>
     </header>
 
-    <!-- Schedule Section -->
+
+    <!-- Contact Section -->
     <section id="schedule">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Match Schedule 2017</h2>
+                    <h2 class="section-heading">For Membership, contact</h2>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
-                    <button type="button" class="btn btn-success">
-                      <h4>Stallion Vs Sportsmen</h4>
-                      <p>23rd July, Keney Park 1</p>
-                    </button>
+                <div class="col-md-6">
+                    <a type="button" class="btn btn-success" href="tel:+18607066190">
+                        <h4>Vishwas Rao : 860.706.6190</h4>
+                    </a>
                 </div>
-                <div class="col-md-4">
-                    <button type="button" class="btn btn-success">
-                      <h4>Colts Vs St Lucia</h4>
-                      <p>23rd July, Bloomfield</p>
-                    </button>
-                </div>
-                <div class="col-md-4">
-                    <a type="button" class="btn btn-primary" href="/schedule.html">
-                      <h4>Click Here</h4>
-                      <p>For full schedule.</p>
+                <div class="col-md-6">
+                    <a type="button" class="btn btn-success" href="tel:+15613194699">
+                        <h4>Parth Jadeja : 561.319.4699</h4>
                     </a>
                 </div>
             </div>
@@ -121,50 +115,82 @@
     <!-- Team-Pictures Grid Section -->
     <section id="team-pictures">
         <div class="container">
-          <div id="moments" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#moments" data-slide-to="0" class="active"></li>
-              <li data-target="#moments" data-slide-to="1"></li>
-              <li data-target="#moments" data-slide-to="2"></li>
-              <li data-target="#moments" data-slide-to="3"></li>
-            </ol>
+            <div id="moments" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#moments" data-slide-to="0" class="active"></li>
+                    <li data-target="#moments" data-slide-to="1"></li>
+                    <li data-target="#moments" data-slide-to="2"></li>
+                    <li data-target="#moments" data-slide-to="3"></li>
+                </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-              <div class="item active">
-                <img src="img/group/1.jpg" >
-              </div>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="img/group/1.jpg">
+                    </div>
 
-              <div class="item">
-                <img src="img/group/5.jpg" >
-              </div>
+                    <div class="item">
+                        <img src="img/group/5.jpg">
+                    </div>
 
-              <div class="item">
-                <img src="img/group/3.jpg" >
-              </div>
+                    <div class="item">
+                        <img src="img/group/3.jpg">
+                    </div>
 
-              <div class="item">
-                <img src="img/group/4.jpg" >
-              </div>
+                    <div class="item">
+                        <img src="img/group/4.jpg">
+                    </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#moments" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#moments" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
 
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#moments" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#moments" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+            <div class="col-md-12">
+                <a type="button" class="btn btn-primary btn-block" href="/moments.html">
+                    For More Pictures, Click Here.
+                </a>
+            </div>
+        </div>
+    </section>
 
-          <div class="col-md-12">
-              <a type="button" class="btn btn-primary btn-block" href="/moments.html">
-                For More Pictures, Click Here.
-              </a>
-          </div>
+    <!-- Schedule Section -->
+    <section id="schedule">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Match Schedule 2018</h2>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <!-- Change the above to col-md-4 -->
+                    <button type="button" class="btn btn-success">
+                        <h4>To Be Announced Soon</h4>
+                        <!-- <p>23rd July, Keney Park 1</p> -->
+                    </button>
+                </div>
+                <!-- <div class="col-md-4">
+                <button type="button" class="btn btn-success">
+                  <h4>Colts Vs St Lucia</h4>
+                  <p>23rd July, Bloomfield</p>
+                </button>
+            </div>
+            <div class="col-md-4">
+                <a type="button" class="btn btn-primary" href="/schedule.html">
+                  <h4>Click Here</h4>
+                  <p>For full schedule.</p>
+                </a>
+            </div> -->
+            </div>
         </div>
     </section>
 
@@ -294,7 +320,7 @@
         </div>
     </section>
 
-        <!-- Contact Section -->
+    <!-- Contact Section -->
     <!-- <section id="contact">
         <div class="container">
             <div class="row">
@@ -349,7 +375,10 @@
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <!-- <li><a href="#"><i class="fa fa-twitter"></i></a> </li> -->
-                        <li><a href="https://www.facebook.com/EuphoriaCricketClub/"><i class="fa fa-facebook"></i></a>
+                        <li>
+                            <a href="https://www.facebook.com/EuphoriaCricketClub/">
+                                <i class="fa fa-facebook"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -372,7 +401,8 @@
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb"
+        crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
