--- a/src/views/index.html
+++ b/src/views/index.html
@@ -68,9 +68,9 @@
                     <li>
                         <a class="page-scroll" href="#team">Teams</a>
                     </li>
-                    <!-- <li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -90,7 +90,7 @@
 
 
     <!-- Contact Section -->
-    <section id="schedule">
+    <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
