--- a/src/views/index.html
+++ b/src/views/index.html
@@ -56,11 +56,14 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#schedule">Match Schedule</a>
+                        <a class="page-scroll" href="#contacts">Contact</a>
                     </li>
                     <li>
                         <!-- <a class="page-scroll" href="#portfolio">Pictures</a> -->
                         <a class="page-scroll" href="#team-pictures">Pictures</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#schedule">Match Schedule</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
@@ -68,9 +71,7 @@
                     <li>
                         <a class="page-scroll" href="#team">Teams</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -90,7 +91,7 @@
 
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="contacts">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -98,12 +99,13 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <a type="button" class="btn btn-success" href="tel:+18607066190">
                         <h4>Vishwas Rao : 860.706.6190</h4>
                     </a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-2"> </div>
+                <div class="col-md-5">
                     <a type="button" class="btn btn-success" href="tel:+15613194699">
                         <h4>Parth Jadeja : 561.319.4699</h4>
                     </a>
@@ -229,7 +231,7 @@
                                     <h4 class="subheading">Double Up</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Introduced 2 team (Stallions and Colts) representing the Club</p>
+                                    <p class="text-muted">Introduced 2 teams (Stallions and Colts) representing the Club</p>
                                 </div>
                             </div>
                         </li>
@@ -370,7 +372,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Euphoria Cricket Club, CT, USA 2017</span>
+                    <span class="copyright">Copyright &copy; Euphoria Cricket Club, CT, USA 2018</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
