Added Intro for the Club and reduced padding in sections

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -89,6 +89,21 @@
         </div>
     </header>
 
+    <!-- Info Section -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h3>Euphoria Cricket Club is a Premier Cricket club, part of the Connecticut Cricket League since 2011, involved 
+                    in Professional Level Cricket played primarily in and around Hartford area.
+                </h3>
+                <p>The Club is represented by 2 teams, Stallions and Colts, who have performed exceptionally over the years and
+                    are considered among the best Cricket teams in the league. Love & passion for the game has led us to participate
+                    in tournaments organized in PA, NJ, NY and MA, and occasionally in Tennis Ball tournaments to improve our skills.
+                </p>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Contact Section -->
     <section id="contacts">
